<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"/>

        <TextView
           android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content" 
             android:layout_weight="3"/>

    </LinearLayout>

 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/car_number"/>

        <TextView
           android:id="@+id/tv_card_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content" 
             android:layout_weight="3"/>

    </LinearLayout>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/similarity"/>

        <TextView
            android:id="@+id/tv_similarity"
            android:layout_width="0dp"
            android:layout_height="wrap_content" 
             android:layout_weight="3"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time"/>

        <TextView
            android:id="@+id/tv_verifyWhen"
            android:layout_width="0dp"
            android:layout_height="wrap_content" 
             android:layout_weight="3"/>

    </LinearLayout>

</LinearLayout>
